--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,10 +4,24 @@
 
 {% block body %}
 
+{% dump actualite %}
+
 <div class="container container-fluid h-100">
     <div class="row h-100">&nbsp;</div>
     <div class="row h-100">
         <main class="col">
+            {% if (actualite) %}
+            <div class="alert alert-danger" role="alert">
+                <div class="row">
+                    <div class="col-md-3 text-center">
+                        <i class="fas fa-info">&nbsp;&nbsp;</i>Actualité du jour :&nbsp;
+                    </div>
+                    <div class="col-md-9 marquee-rtl h25">
+                        <div>{{ actualite.content }}</div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
             {% for article in articles %}
             <div class="card">
                 <div class="card-header blog">
