--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,27 +14,25 @@
     {% endif %}
     {% if app.user %}
         <div class="flash-notice">
-            Bonjour {{ app.user.username }}
+            Bonjour {{ app.user.username }}, tu es déjà connecté
         </div>
     {% else %}
-        <form class="form-signin" method="post">
-            <div class="text-center w-25 mx-auto">
-                <img src="images/badplayer.png" width="100" height="100">
-                <div class="p-2"></div>
-                <input class="form-control-lg input-lg" type="text" value="{{ last_username }}" name="username" id="inputUsername" placeholder="Utilisateur" required autofocus>
-                <div class="p-3"></div>
-                <input class="form-control-lg" type="password" name="password" id="inputPassword" placeholder="Mot de passe" required>
-                <div class="p-1"></div>
-                <div class="text-left p-2">
-                    <a href="{{ path('app_forgotten_password') }}">Mot de passe oublié ?</a>
-                </div>
+        <br>
+        <div class="container login">
+            <div class="bg-login rounded form-signin-heading">
+                <form action="" method="post" name="Login_Form" class="form-signin">       
+                    <div class="text-login"><i class="fas fa-user-lock"></i></div>
+                    <div class="login">
+                        <input type="text" value="{{ last_username }}" class="form-control" name="Username" placeholder="Utilisateur" required="" autofocus="" />
+                        <input type="password" class="form-control" name="Password" placeholder="Mot de passe" required=""/>     		  
+                        <input class="form-control" type="hidden" name="_csrf_token"
+                            value="{{ csrf_token('authenticate') }}">
+                    </div>
+                    <button class="btn btn-lg btn-info"  name="Submit" value="Login" type="Submit">Entrer</button>  			
+                </form>			
             </div>
-            <div class="text-center w-25 p-2 mx-auto">
-                <button class="btn btn-lg btn-primary" type="submit"><p class="h4">Entrer</p></button>
-            </div>
-            <input class="form-control" type="hidden" name="_csrf_token"
-                        value="{{ csrf_token('authenticate') }}">
-        </form>
+            <br>
+        </div>
     {% endif %}
 
 {% endblock %}
