--- a/public/style.css
+++ b/public/style.css
@@ -276,6 +276,7 @@ input:required {
     margin-bottom: 10px;
     margin-top: 10px;
     font-size: 1.6em;
+    line-height: 2em;
 }
 
 /* Footer */
