--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,8 +23,8 @@
                 <form action="" method="post" name="Login_Form" class="form-signin">       
                     <div class="text-login"><i class="fas fa-user-lock"></i></div>
                     <div class="login">
-                        <input type="text" value="{{ last_username }}" class="form-control" name="Username" placeholder="Utilisateur" required="" autofocus="" />
-                        <input type="password" class="form-control" name="Password" placeholder="Mot de passe" required=""/>     		  
+                        <input type="text" value="{{ last_username }}" class="form-control" name="username" placeholder="Utilisateur" required="" autofocus="" />
+                        <input type="password" class="form-control" name="password" placeholder="Mot de passe" required=""/>     		  
                         <input class="form-control" type="hidden" name="_csrf_token"
                             value="{{ csrf_token('authenticate') }}">
                     </div>
