--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -92,7 +92,7 @@
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_login') }}"><span class="glyphicon glyphicon-log-in"></span>
-                            <i class="fas fa-user-slash">&nbsp;</i>Se connecter
+                            <i class="fas fa-sign-in-alt">&nbsp;</i>Se connecter
                         </a>
                     </li>
                 {% endif %}
