--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -97,7 +97,7 @@
                             {% if (match4) %}
                                 <div class="col interclub"><span>{{ match4.dateRencontre|localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM Y')|capitalize }}</span></div>
                             {% else %}
-                                <div class="col"><span>Saison terminée !</span></div>
+                                <div class="col interclub"><span>Saison terminée !</span></div>
                             {% endif %}
                         </div>
                         {% if (match4) %}
