--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,18 +7,11 @@
         <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
         {% block stylesheets %}{% endblock %}
     </head>
-    <body>{# Gestion des droits pour l'ensemble du site
-                Z par défaut : utilisateur lambda non connecté
-                F : utilisateur connecté mais sans aucun droit/catégorie
-                E : Jeune
-                D : Loisirs avec Interclub
-                C : Compétiteurs
-                B : Membres du bureau + capitaines
-                A : Grand chef avec tous les droits
-            #}
+    <body>
         {% set level = 'Z' %}
         {% if app.user %}
             {% set level = 'F' %}
@@ -67,7 +60,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="{{ path('team.index') }}"><i class="fas fa-user-friends">&nbsp;</i>Equipes de Villepreux</a>
-                            <a class="dropdown-item" href="{{ path('interclub.index') }}"><i class="fas fa-retweet">&nbsp;</i>Rencontres</a>
+                            <a class="dropdown-item" href="{{ path('interclub.index') }}"><i class="fas fa-retweet">&nbsp;</i>Toutes les Rencontres</a>
+                            <a class="dropdown-item" href="{{ path('myinterclubs') }}"><i class="fas fa-retweet">&nbsp;</i>Gérer mes interclubs</a>
                             <a class="dropdown-item" href="{{ path('interclubVeteran.index') }}"><i class="fab fa-android">&nbsp;</i>Interclubs Vétéran</a>
                         </div>
                     </li>
@@ -185,6 +179,7 @@
         </section>
         <!-- ./Footer -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="/app.js"></script>
