--- a/templates/interclub/edit.html.twig
+++ b/templates/interclub/edit.html.twig
@@ -3,35 +3,43 @@
 {% block title 'Modifier une rencontre' %}
 
 {% block body %}
+{% for message in app.flashes('success') %}
+    <div class="alert alert-success">
+        {{ message }}
+    </div>
+{% endfor %}
 <div class="container mt-4">
-    <a class="btn btn-primary" href="{{ path('interclub.index')}}"><i class="fas fa-list-alt">&nbsp;</i>Liste des rencontres</a>
+    <a class="btn btn-primary" href="{{ path('interclub.index')}}"><i class="fas fa-list-alt">&nbsp;</i>Retour Liste</a>
+    <a class="btn btn-info" href="{{ path('compo', {'interclubId': interclub.id})}}"><i class="fas fa-list-alt">&nbsp;</i>Faire la composition</a>
+
 </div>
 <div class="container mt-4">
     <h3>Rencontre <small class="text-muted">`{{ interclub.name }}`</small></h3>
     {{ form_start(interclubForm) }}
     <div class="row">
-        <div class="col-md-auto">{{ form_row(interclubForm.name) }}</div>
-        <div class="col-md-auto">{{ form_row(interclubForm.teamhome, {
+        <div class="col-md-4">{{ form_row(interclubForm.name) }}</div>
+        <div class="col-sm-7">{{ form_row(interclubForm.dateRencontre) }}</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-5 col-sm-6 col-md-4">{{ form_row(interclubForm.teamhome, {
                 attr: {
                     'data-specific-teamhome-url': path('interclub_teamhome_select'),
                     'class': 'js-interclub-form-teamhome'
                 }
             }) }}
         </div>
-        <div class="col-md-auto">{{ form_row(interclubForm.teamext) }}</div>
+        <div class="col-xs-5 col-sm-6 col-md-4">{{ form_row(interclubForm.teamext) }}</div>
     </div>
     <div class="row">
-        <div class="col-md-auto">{{ form_row(interclubForm.dateRencontre) }}</div>
-        <div class="col-md-auto">{{ form_row(interclubForm.score) }}</div>
-    </div>
-    <div class="row">
-        <div class="col-md-auto js-specific-teamhome-target">
+        <div class="col-md-4 col-sm-6 js-specific-teamhome-target">
             {%  if interclubForm.location is defined %}
                 {{ form_row(interclubForm.location) }}
             {% endif %}
         </div>
-        <div class="col-md-auto">{{ form_row(interclubForm.saison) }}</div>
+        <div class="col-md-4 col-sm-4">{{ form_row(interclubForm.saison) }}</div>
+        <div class="col-md-2 col-sm-2">{{ form_row(interclubForm.score) }}</div>
     </div>
+    <!--
     <h3>Composition de l'équipe</h3>
         <div class="row">
             <div class="col-md-auto">{{ form_row(interclubForm.SH1) }}</div>
@@ -48,10 +56,14 @@
         <div class="row">
             <div class="col-md-auto">{{ form_row(interclubForm.DMXJoueuse) }}</div>
             <div class="col-md-auto">{{ form_row(interclubForm.DMXJoueur) }}</div>
-        </div>
+        </div> -->
         <div class="row">
+            <div class="col-md-auto">   
+                {{ form_row(interclubForm.save) }}
+            </div>
             <div class="col-md-auto">
-                <button class="btn btn-primary"><i class="far fa-save">&nbsp;</i>{{ button|default('Sauvegarder les modifications') }}</button>
+                {{ form_widget(interclubForm.saveAndQuit) }}
+<!--                <button class="btn btn-primary"><i class="far fa-save">&nbsp;</i>{{ button|default('Sauvegarder et quitter') }}</button> -->
             </div>
     {{ form_end(interclubForm) }}
             <div class="col-md-auto">
