--- a/templates/interclub/index.html.twig
+++ b/templates/interclub/index.html.twig
@@ -100,7 +100,7 @@
     {% endfor %}
 
     <div class="row">
-        <div class="col-2">
+        <div class="col-md-auto">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <div class="tab">&nbsp;</div>
                 <a class="nav-link active" id="v-pills-vip1-tab" data-toggle="pill" href="#v-pills-vip1" role="tab" aria-controls="v-pills-vip1" aria-selected="true">Villepreux 1</a>
@@ -109,7 +109,7 @@
                 <a class="nav-link" id="v-pills-vip4-tab" data-toggle="pill" href="#v-pills-vip4" role="tab" aria-controls="v-pills-vip4" aria-selected="false">Villepreux 4</a>
             </div>
         </div>
-        <div class="col-10">
+        <div class="col-md-auto">
             <div class="tab-content table-middlefont" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="v-pills-vip1" role="tabpanel" aria-labelledby="v-pills-vip1-tab">{{ liste1|raw }}</div>
                 <div class="tab-pane fade" id="v-pills-vip2" role="tabpanel" aria-labelledby="v-pills-vip2-tab">{{ liste2|raw }}</div>
