--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Reset Password !{% endblock %}
 
 {% block body %}
-    {% for message in app.flashes('danger') %}
+    {% for message in app.flashes('danger') %}i
         <div class="flash-danger">
             {{ message }}
         </div>
